examples-alongsurfgizmo: changed default camera pose

--- a/examples/interaction/tests/test_alongsurfacetranslategizmo.xhtml
+++ b/examples/interaction/tests/test_alongsurfacetranslategizmo.xhtml
@@ -57,7 +57,7 @@ SOFTWARE.
             </defs>
 
             <group id="g_camera">
-                <view position="0 2 10" id="v_camera"/>
+                <view position="14 14 36.365" orientation="-0.645 0.751 0.139 0.560" id="v_camera"/>
             </group>
 
             <group transform="#t_directional">
