examples: adapted all examples to use the xml3d.tools.js now contained in the external folder

--- a/examples/viewtracker.xhtml
+++ b/examples/viewtracker.xhtml
@@ -31,7 +31,7 @@ SOFTWARE.
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="external/xml3d.js"></script>
-    <script type="text/javascript" src="../build/output/xml3d.tools.js"></script>
+    <script type="text/javascript" src="external/xml3d.tools.js"></script>
     <script type="text/javascript" src="page.js"/>
 
     <script type="text/javascript" src="viewtracker.js"/>
