--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -33,7 +33,7 @@ SOFTWARE.
     <script type="text/javascript" src="page.js"></script>
 
     <script type="text/javascript" src="external/xml3d.js"></script>
-    <script src="../build/output/xml3d.tools.js" type="text/javascript"/>
+    <script src="external/xml3d.tools.js" type="text/javascript"/>
     <script type="text/javascript" src="cameracontrollers.js"/>
 </head>
 <body>
