--- a/examples/gamepad.xhtml
+++ b/examples/gamepad.xhtml
@@ -34,7 +34,7 @@ SOFTWARE.
     <script type="text/javascript" src="page.js"></script>
 
     <script src="external/xml3d.js" type="text/javascript"/>
-    <script src="../build/output/xml3d.tools.js" type="text/javascript"/>
+    <script src="external/xml3d.tools.js" type="text/javascript"/>
     <script src="gamepad.js" type="text/javascript"></script>
 </head>
 <body onload="init()">
