--- a/examples/transformable.xhtml
+++ b/examples/transformable.xhtml
@@ -32,7 +32,7 @@ SOFTWARE.
     <script type="text/javascript" src="page.js"></script>
 
     <script src="external/xml3d.js" type="text/javascript"/>
-    <script src="../build/output/xml3d.tools.js" type="text/javascript"/>
+    <script src="external/xml3d.tools.js" type="text/javascript"/>
     <script src="transformable.js" type="text/javascript"/>
 </head>
 <body onload="initTransformable();">
