examples-alongsurfgizmo: added description

--- a/examples/interaction/tests/test_alongsurfacetranslategizmo.xhtml
+++ b/examples/interaction/tests/test_alongsurfacetranslategizmo.xhtml
@@ -70,6 +70,24 @@ SOFTWARE.
                 </group>
             </group>
         </xml3d>
+
+        <div class="description">
+            <div class="paragraph">
+                With this gizmo an object can be translated on the surface it stands on.
+                In the back there is a step. If you move the object towards it at some point it
+                will stand upon the step. Also the whole surface itself is tilted a little bit.
+            </div>
+
+            <div class="separator" />
+
+            <div class="paragraph">
+                <b>Controls:</b>
+                <ul>
+                    <li><em>left mouse-button:</em> activate the dragging operation</li>
+                    <li><em>Ctrl while dragging:</em> move the object in the horizontal plane ignoring the surface</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 </body>
