--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -44,7 +44,7 @@ SOFTWARE.
                activeView="#v_camera">
             <defs>
                 <data id="d_rectangle">
-                    <int id="indices" name="index">0 1 2 1 2 3</int>
+                    <int id="indices" name="index">0 1 2 1 3 2</int>
                     <float3 id="positions" name="position">-1.0 -1.0 0.0 1.0 -1.0 0.0 -1.0 1.0 0.0 1.0 1.0 0.0</float3>
                     <float3 name="normal">0.0 0.0 1.0 0.0 0.0 1.0 0.0 0.0 1.0 0.0 0.0 1.0</float3>
                     <float2 id="texcoords" name="texcoord">0.0 1.0 1.0 1.0 0.0 0.0 1.0 0.0</float2>
@@ -89,6 +89,27 @@ SOFTWARE.
               None
             </span>
         </div>
+
+        <div class="separator" />
+
+        <div id="translate-description" class="description">
+            <div class="paragraph">
+                The <span class="code">TranslateGizmo</span> is used to perform constrained translation
+                of the target.
+                <ul>
+                    <li><em>arrows:</em> along a single axis</li>
+                    <li><em>rectangles:</em> inside a plane</li>
+                </ul>
+            </div>
+        </div>
+        <div id="rotate-description" class="description" style="display:none;">
+            <div class="paragraph">
+                The <span class="code">RotateGizmo</span> is used to perform constrained rotation
+                of the target. Drag each of the bands to rotate the target along one of the major, local
+                axes.
+            </div>
+        </div>
+
     </div>
 </div>
 </body>
