examples: final touches

--- a/examples/animatable.xhtml
+++ b/examples/animatable.xhtml
@@ -26,7 +26,7 @@ SOFTWARE.
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>DOM Modifications: Animations</title>
+    <title>Animatable</title>
 
     <link rel="stylesheet" type="text/css" media="all" href="style/default.css"/>
 
@@ -121,6 +121,9 @@ SOFTWARE.
             </group>
         </group>
     </xml3d>
+
+    <div class="separator" />
+
     <div>
         <div>
             <button onclick="startPositionAnimation()" class="test-button">Animate position</button>
