--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -76,6 +76,9 @@ SOFTWARE.
                 </group>
             </group>
         </xml3d>
+
+        <div class="separator" />
+
         <div class="actions">
             <b>Camera Type:</b>
             <span>
