--- a/examples/elementfactory.xhtml
+++ b/examples/elementfactory.xhtml
@@ -44,6 +44,8 @@ SOFTWARE.
         <xml3d id="scene" xmlns="http://www.xml3d.org/2009/xml3d" style="width:350px; height:350px;">
         </xml3d>
 
+        <div class="separator" />
+
         <div class="description">
             The element factory provides a small set of methods to create common XML3D elements
             and simple geometry in JavaScript. The example should show a red cube, with a point light
