--- a/examples/interaction/tests/test_alongsurfacetranslategizmo.xhtml
+++ b/examples/interaction/tests/test_alongsurfacetranslategizmo.xhtml
@@ -71,6 +71,8 @@ SOFTWARE.
             </group>
         </xml3d>
 
+        <div class="separator" />
+
         <div class="description">
             <div class="paragraph">
                 With this gizmo an object can be translated on the surface it stands on.
