--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -74,6 +74,8 @@ SOFTWARE.
             </group>
         </xml3d>
 
+        <div class="separator" />
+
         <div class="actions">
             <b>Gizmo Type:</b>
             <span>
@@ -94,7 +96,7 @@ SOFTWARE.
 
         <div id="translate-description" class="description">
             <div class="paragraph">
-                The <span class="code">TranslateGizmo</span> is used to perform constrained translation
+                The <b>TranslateGizmo</b> is used to perform constrained translation
                 of the target.
                 <ul>
                     <li><em>arrows:</em> along a single axis</li>
