--- a/examples/interaction/tests/test_translatable.xhtml
+++ b/examples/interaction/tests/test_translatable.xhtml
@@ -97,6 +97,8 @@ SOFTWARE.
         </group>
     </xml3d>
 
+    <div class="separator" />
+
     <div class="actions">
         <input id="b_toggleSensors" type="button" value="Detach Sensors" class="test-button" onclick="toggleSensors();"/>
     </div>
