--- a/examples/transformsensor.xhtml
+++ b/examples/transformsensor.xhtml
@@ -61,6 +61,8 @@ SOFTWARE.
         </group>
     </xml3d>
 
+    <div class="separator" />
+
     <div class="description">
         <div class="paragraph">
             The TransformSensor is similar to X3D's
