--- a/examples/viewtracker.xhtml
+++ b/examples/viewtracker.xhtml
@@ -120,9 +120,11 @@ SOFTWARE.
             </group>
         </xml3d>
 
+        <div class="separator" />
+
         <div class="description">
             <div class="paragraph">
-                The XML3D.tools.ViewTracker
+                The <b>ViewTracker</b>
                 tracks the active view of a given xml3d element for
                 transformation changes and applies that transformation to a given
                 transform node.
