--- a/examples/transformtracker.xhtml
+++ b/examples/transformtracker.xhtml
@@ -26,7 +26,7 @@ SOFTWARE.
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>.trackable() Test</title>
+    <title>TransformTracker</title>
     <link rel="stylesheet" type="text/css" media="all" href="style/default.css" />
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -67,6 +67,8 @@ SOFTWARE.
         </group>
     </xml3d>
 
+    <div class="separator" />
+
     <div class="actions">
         <div>
             <button type="button" class="test-button" onclick="toggleXfmValueOfGrp2();">
@@ -81,6 +83,8 @@ SOFTWARE.
             Move the rectangle left and right.
         </div>
     </div>
+
+    <div class="separator" />
 
     <div class="description">
         <div class="paragraph">Through the XML3D.tools.TransformTracker transformation changes of given nodes
