examples-cameracontrollers: added test for "moving faster" feature

--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -105,9 +105,9 @@ SOFTWARE.
         <div class="description">
             <ul>
                 <li><b>Examine:</b> examination mode. Left click: rotate, right click: zoom.</li>
-                <li><b>Fly</b> free fly. Left click: rotate, keys WASD: move.</li>
+                <li><b>Fly</b> free fly. Left click: rotate, keys WASD: move, CTRL while moving: move fast</li>
                 <li><b>TouchFly:</b> free fly for touch input. One finger: rotate, two fingers: zoom.</li>
-                <li><b>Custom Fly:</b> free fly with custom controls. Right click: rotate, arrow keys: move</li>
+                <li><b>Custom Fly:</b> free fly with custom controls. Right click: rotate, arrow keys: move, F while moving: move fast</li>
             </ul>
         </div>
     </div>
